# networkx-temporal

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: publish.yml
.github/workflows/: publish.yml
docs/: README.md  requirements.txt
docs/_static/css/: custom.css
docs/_templates/: layout.html
docs/figure/: banner.xcf  logo.xcf
docs/source/: api.rst  cite.rst  conf.py  genindex.html  guide.rst  include-api.rst  include-examples.rst  index.rst  references.rst
docs/source/api/: algorithms.rst  api.rst  classes.rst  drawing.rst  functions.rst  generators.rst  graph.rst  io.rst  metrics.rst  models.rst  readwrite.rst  transform.rst  typing.rst  utils.rst
docs/source/bib/: networkx2008.rst  networkxtemporal2024.rst  networkxtemporal2025.rst
docs/source/examples/: basics.rst  community.rst  convert.rst  metrics.rst  notebook.rst
example/: notebook.ipynb
extra/example/: networkx-temporal-example.ipynb
notebook/: networkx-temporal-01-basics.ipynb  networkx-temporal-02-convert.ipynb  networkx-temporal-03-metrics.ipynb  networkx-temporal-04-community.ipynb  networkx-temporal-example.ipynb  networkx-temporal.ipynb  networkx-temporal.md  notebook.ipynb
src/networkx_temporal/: __init__.py  __version__.py  base.py  build.py  convert.py  networkx_temporal.py  temporal.py  utils.py
src/networkx_temporal/algorithms/: __init__.py  betweenness.py  bridging.py  brokering.py  centrality.py  centralization.py  closeness.py  clustering.py  degree.py  modularity.py
src/networkx_temporal/algorithms/community/: __init__.py  leiden.py
src/networkx_temporal/algorithms/graph/: __init__.py  centralization.py  conductance.py  longitudinal_modularity.py  modularity.py  modularity_longitudinal.py  modularity_multislice.py  modularity_spectral.py  multislice_modularity.py
src/networkx_temporal/algorithms/node/: __init__.py  bridging.py  brokering.py  degree.py
src/networkx_temporal/classes/: __init__.py  abc.py  digraph.py  factory.py  functions.py  graph.py  methods.py  multidigraph.py  multigraph.py  networkx.py  slice.py  types.py  wraps.py
src/networkx_temporal/convert/: __init__.py  convert.py  dynetx.py  graph_tool.py  nx2dgl.py  nx2gt.py  nx2nk.py  nx2pyg.py  nx2teneto.py
src/networkx_temporal/draw/: __init__.py  draw.py
src/networkx_temporal/drawing/: __init__.py  draw.py  layout.py  networkx.py  unrolled.py
src/networkx_temporal/example/: draw.py
src/networkx_temporal/generators/: __init__.py  datasets.py  examples.py  generators.py  sbm.py
src/networkx_temporal/generators/datasets/: __init__.py  collegemsg.py  fediverse.py  pubmed.py
src/networkx_temporal/generators/sbm/: __init__.py  dynamic_sbm.py  sbm.py  utils.py
src/networkx_temporal/graph/: __init__.py  abc.py  base.py  digraph.py  empty.py  factory.py  functions.py  graph.py  methods.py  multidigraph.py  multigraph.py  neighbors.py  networkx.py  order.py  overrides.py  size.py  slice.py  utils.py  wrapper.py
src/networkx_temporal/io/: __init__.py  reader.py  utils.py  writer.py
src/networkx_temporal/methods/: __init__.py  static.py  temporal.py  utils.py
src/networkx_temporal/metrics/: __init__.py  base.py  static.py  temporal.py  utils.py
src/networkx_temporal/metrics/community/: __init__.py  modularity.py
src/networkx_temporal/metrics/graph/: __init__.py  graph.py
src/networkx_temporal/models/: __init__.py
src/networkx_temporal/readwrite/: __init__.py  gdf.py  hif.py  reader.py  readwrite.py  writer.py
src/networkx_temporal/tests/: collegemsg.py  example.py  test.py
src/networkx_temporal/transform/: __init__.py  convert.py  events.py  snapshots.py  static.py  unified.py  unrolled.py
src/networkx_temporal/typing/: __init__.py  typing.py
src/networkx_temporal/utils/: __init__.py  convert.py  edges.py  igraph.py  networkx.py  nodes.py  nx2gt.py  nx2snap.py  snap.py  teneto.py  time.py  utils.py
tests/: requirements.txt  test.py  test_collegemsg.py  test_hif.py
tests/data/: publications.hif.json
(+20 files in other folders)
